# mynarrative-drishti

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  alembic.ini  docker-compose.yml  fly-qdrant.toml  fly.toml  pytest.ini  requirements.txt
.github/scripts/: pkg_path.sh
.github/workflows/: ci-images.yml  ci-terraform.yml  ci.yml  loadtest.yml  security.yml  zap-baseline.yml
alembic/: env.py
alembic/versions/: 001_initial.py  (+2 more)
api/: config.py  database.py  main.py
colab/: requirements.txt  vtoe_worker.ipynb  vtoe_worker.py
docs/: RAILWAY_SETUP.md  SECURITY_CHECKLIST.md  dns_setup.md  red_flags_scraping.md
libs/py-observability/: pyproject.toml
libs/py-observability/src/drishti_observability/: __init__.py  config.py  logging.py  metrics.py  middleware.py  sentry.py  setup.py  tracing.py
libs/py-observability/tests/: test_config.py  test_redaction.py  test_sentry_scrub.py  test_setup.py
loadtest/: README.md
notebooks/: colab_setup.md
scrapers/: base.py
security/: zap-rules.tsv
services/admin-svc/: Dockerfile  pyproject.toml
services/admin-svc/grafana/: drishti-overview.json  drishti-vtoe.json
services/admin-svc/src/admin/: config.py  main.py  schemas.py
services/admin-svc/src/admin/api/: analytics.py
services/admin-svc/src/admin/sources/: events.py  prometheus.py
services/admin-svc/tests/: test_analytics.py  test_prometheus.py
services/shopify-sync-svc/: pyproject.toml
services/shopify-sync-svc/src/shopify_sync/: config.py  embedder.py  gap_client.py  main.py  models.py  normalize.py  qdrant_store.py  shopify_auth.py  sync_service.py
services/shopify-sync-svc/src/shopify_sync/api/: admin.py  webhooks.py
services/shopify-sync-svc/tests/: test_normalize.py  test_sync_service.py  test_webhooks.py
tests/: conftest.py  test_agnostic.py  test_api.py  test_engine_retry.py  test_ethnic.py  test_imaging.py  test_memory.py  test_visual_regression.py
vtoe/: config.py  requirements.txt
(+61 files in other folders)
