[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shopify-sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "torch>=2.3",
    "transformers>=4.40",
    "Pillow>=10.0",
    "prometheus-client>=0.20",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
